fixed mobile layout issue

--- a/css/index.css
+++ b/css/index.css
@@ -150,7 +150,7 @@ table {
   font-family: 'Roboto', Arial, sans-serif;
 }
 .margin-bottom {
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 .flex-centered {
   display: flex;
@@ -163,7 +163,7 @@ table {
   color: #222222;
   font-family: 'Roboto', Arial, sans-serif;
   letter-spacing: 1px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 .recent-btn {
   width: 250px;
@@ -257,7 +257,7 @@ html {
 @media (max-width:500px) {
   .container nav {
     width: 100%;
-    max-width: 498px;
+    max-width: 480px;
   }
 }
 .container nav .nav-wrapper {
@@ -301,4 +301,210 @@ html {
 }
 nav.show {
   display: flex;
+}
+.container .content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 860px;
+  margin-bottom: 40px;
+}
+@media (max-width:500px) {
+  .container .content {
+    flex-direction: column-reverse;
+  }
+}
+.container .content .info {
+  width: 50%;
+  padding: 20px;
+}
+@media (max-width:500px) {
+  .container .content .info {
+    width: 100%;
+    padding: 20px;
+  }
+}
+.container .content .info h3 {
+  font-weight: Bold;
+  font-Size: 2.8rem;
+  color: #222222;
+  font-family: 'Roboto', Arial, sans-serif;
+  letter-spacing: 1px;
+  margin-bottom: 20px;
+}
+.container .content .info p {
+  font-family: 'Roboto', Arial, sans-serif;
+  font-size: 1.6rem;
+  text-align: justify;
+  margin-bottom: 20px;
+  line-height: 1.2;
+}
+.container .content .info .btn {
+  font-family: 'Roboto', Arial, sans-serif;
+  width: 120px;
+  height: 40px;
+  font-size: 1.5rem;
+  text-transform: capitalize;
+  border: 1px solid #222222;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width:500px) {
+  .container .content .info .btn {
+    width: 100%;
+    height: 40px;
+    font-size: 1.5rem;
+    text-transform: capitalize;
+    border: 1px solid #222222;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+.container .content .img-content {
+  width: 50%;
+}
+@media (max-width:500px) {
+  .container .content .img-content {
+    width: 90%;
+  }
+}
+.container .content .img-content img {
+  width: 100%;
+}
+@media (max-width:500px) {
+  .container .content-bottom {
+    flex-direction: column;
+  }
+}
+.container .recents h3 {
+  font-weight: Bold;
+  font-Size: 2.8rem;
+  color: #222222;
+  font-family: 'Roboto', Arial, sans-serif;
+  letter-spacing: 1px;
+  margin-bottom: 20px;
+}
+@media (max-width:500px) {
+  .container .recents h3 {
+    margin-left: 20px;
+  }
+}
+.container .recents .villas {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 860px;
+}
+.container .recents .villas h3 {
+  align-self: flex-end;
+  width: 250px;
+  border: 1px solid #FFFFFF;
+  background-color: #d8d8d8;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-family: 'Roboto', Arial, sans-serif;
+  font-weight: 400;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: -60px;
+  padding: 35px 30px;
+}
+@media (max-width:500px) {
+  .container .recents .villas h3 {
+    align-self: center;
+    width: 90%;
+    justify-content: center;
+    margin-left: 0px;
+  }
+}
+.container .recents .recent-info {
+  display: flex;
+  width: 50%;
+  margin: 0 auto;
+}
+@media (max-width:500px) {
+  .container .recents .recent-info {
+    width: 90%;
+    justify-content: center;
+  }
+}
+.container .recents .recent-info p {
+  font-weight: Regular;
+  font-size: 1.6rem;
+  line-height: 2;
+  font-family: 'Roboto', Arial, sans-serif;
+  margin-bottom: 45px;
+  position: relative;
+  top: -30px;
+}
+.container .recents .outskirts {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 860px;
+}
+.container .recents .outskirts h3 {
+  align-self: flex-start;
+  width: 250px;
+  border: 1px solid #FFFFFF;
+  background-color: #d8d8d8;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-family: 'Roboto', Arial, sans-serif;
+  font-weight: 400;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: -60px;
+  padding: 35px 30px;
+}
+@media (max-width:500px) {
+  .container .recents .outskirts h3 {
+    align-self: center;
+    width: 90%;
+    justify-content: center;
+    margin-left: 0px;
+  }
+}
+.container .recents .blocks {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 860px;
+}
+.container .recents .blocks h3 {
+  align-self: flex-end;
+  width: 250px;
+  border: 1px solid #FFFFFF;
+  background-color: #d8d8d8;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-family: 'Roboto', Arial, sans-serif;
+  font-weight: 400;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: -60px;
+  padding: 35px 30px;
+}
+@media (max-width:500px) {
+  .container .recents .blocks h3 {
+    align-self: center;
+    width: 90%;
+    justify-content: center;
+    margin-left: 0px;
+  }
 }
