--- a/less/main.less
+++ b/less/main.less
@@ -1,2 +1,120 @@
+.container{
+  .content{
+    @media @mobile{
+     flex-direction:column-reverse;
+    }
+    display:flex;
+    flex-direction:row;
+    align-items: center;
+    justify-content: space-between;
+    width:100%;
+    max-width:860px;
+    margin-bottom:40px;
+    .info{
+      @media @mobile{
+        width:100%;
+        padding:20px;
+      }
+      width:50%;
+      padding:20px;
+      h3{
+        .sub-header();
+      }
+      p{
+        .font();
+        font-size:1.6rem;
+        text-align: justify;
+        .margin-bottom();
+        line-height: 1.2;
+      }
+      .btn{
+        @media @mobile{
+          .btn(100%,40px,@dark);
+        }
+        .font();
+        .btn(120px,40px,@dark);
+      }
+    }
+    .img-content{
+      @media @mobile{
+        width:90%;
+      }
+      img{
+        width:100%;
+      }
+      width:50%;
+    }
+  }
+  .content-bottom{
+    @media @mobile{
+      flex-direction: column;
+    }
+  }
+}
+.container{
+  .recents{
+    h3{
+      @media @mobile{
+        margin-left:20px;
+      }
+      .sub-header();
+    }
+    .villas{
+      .recent-wrapper();
+      h3{
+        @media @mobile{
+          align-self: center;
+          width:90%;
+          justify-content: center;
+          margin-left:0px;
+        }
+        align-self:flex-end;
+        .recent-btn();
+      }
+    }
+    .recent-info{
+      @media @mobile{
+        width:90%;
+        justify-content: center;
+      }
+      display:flex;
+      width:50%;
+      margin: 0 auto;
+      p{
+        .general-text();
+        .font();
+        margin-bottom:45px;
+        position: relative;
+        top:-30px;
+      }
+    }
+    .outskirts{
+      .recent-wrapper();
+      h3{
+        @media @mobile{
+          align-self: center;
+          width:90%;
+          justify-content: center;
+          margin-left:0px;
+        }
+        align-self: flex-start;
+        .recent-btn();
+      }
+    }
+    .blocks{
+      .recent-wrapper();
+      h3{
+        @media @mobile{
+          align-self: center;
+          width:90%;
+          justify-content: center;
+          margin-left:0px;
+        }
+        align-self: flex-end;
+        .recent-btn();
+      }
+    }
+  }
+}
 
 
