--- a/less/mixins.less
+++ b/less/mixins.less
@@ -3,7 +3,7 @@
 }
 
 .margin-bottom{
-  margin-bottom:40px;
+  margin-bottom:20px;
 }
 
 .flex-centered{
