--- a/less/navbar.less
+++ b/less/navbar.less
@@ -23,7 +23,7 @@
   nav{
     @media @mobile{
       width:100%;
-      max-width:498px;
+      max-width:480px;
     }
     .flex-centered();
     flex-direction: column;
